# VisualStudioMIEnginePictureViewer

./: README.md
simpletest_raspicam/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  simpletest_raspicam.cpp
src/: PictureViewer.sln
src/PictureViewer/: CommandHandler.cs  PictureViewer.csproj  PictureViewerPackage.cs  PictureViewerService.cs  PictureViewerViewModel.cs  VisualizerWindow.xaml  VisualizerWindow.xaml.cs  raspicam.natvis  source.extension.vsixmanifest
src/PictureViewer/Properties/: AssemblyInfo.cs
